--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "devDependencies": {
     "@playwright/test": "^1.49.1",
     "@types/node": "^20.11.20"
+  },
+  "dependencies": {
+    "live-server": "^1.2.2",
+    "node-html-parser": "^7.0.1"
   }
 }
